--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@hesoyam.zip/tiny-orm",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "bun build index.ts --outdir dist"
+    "build": "bun build index.ts --outdir dist",
+    "prepublishOnly": "bun run build"
   },
   "devDependencies": {
     "@tsconfig/strictest": "^2.0.5",
