--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "@hesoyam.zip/tiny-orm",
-  "version": "0.1.4",
+  "description": "A minimal storage layer radically optimized toward development speed.",
+  "version": "0.1.5",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/marcospgp/tinyORM.git"
+  },
+  "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
