--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "@marcospgp/tiny-orm",
   "description": "A minimal storage layer radically optimized toward development speed.",
-  "version": "0.1.0",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/marcospgp/tinyORM.git"
-  },
+  "version": "0.1.1",
+  "repository": "https://github.com/marcospgp/tinyORM",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
