--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@marcospgp/tiny-orm",
   "description": "A minimal storage layer radically optimized toward development speed.",
-  "version": "0.1.5",
-  "repository": "https://github.com/marcospgp/tinyORM",
+  "version": "0.1.6",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/marcospgp/tinyORM.git"
+  },
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
