--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,34 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@tsconfig/strictest",
   "compilerOptions": {
-    "lib": ["ESNext"],
+    // Environment setup & latest features
+    "lib": ["ES2020"],
+
     "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "bundler",
+    "module": "Preserve",
+    "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
+
+    // Bundler mode
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "verbatimModuleSyntax": true,
+    "noEmit": true,
+
+    // Best practices
     "strict": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+
+    // Some stricter flags
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noPropertyAccessFromIndexSignature": true,
+
+    "forceConsistentCasingInFileNames": true
 
     // Allow using @ to represent src folder.
     // This is commented out because unlike bun, tsc does not rewrite imports,
