--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@marcospgp/tiny-orm",
   "description": "A minimal storage layer radically optimized toward development speed.",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/marcospgp/tinyORM.git"
@@ -20,6 +20,7 @@
     "test": "bun test"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@tsconfig/strictest": "^2.0.5",
     "@types/bun": "latest",
     "react": "^19.1.0",
